[Chore]: Add color variables

--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,98 @@
   color: rgba(255, 255, 255, 0.87);
   background-color: #242424;
 
+  --dark: #212121;
+  --light: #fff;
+  --text-dark: #333333;
+  --text-light: #767268;
+  --primary-light: #ED8335;
+  --primary-dark: #f19a37;
+  --glyph-gray: #f5f5f7;
+  --glyph-gray-override: #1d1d1f;
+  --glyph-gray-secondary: #86868b;
+  --glyph-gray-secondary-alt: #a1a1a6;
+  --glyph-gray-tertiary: #6e6e73;
+  --glyph-blue: #2997ff;
+  --glyph-blue-override: #06c;
+  --glyph-orange: #f56300;
+  --glyph-red: #ff3037;
+  --glyph-green: #03a10e;
+  --fill: #000;
+  --fill-override: #fff;
+  --fill-gray: #f5f5f7;
+  --fill-blue: #0071e3;
+  --fill-orange: #f56300;
+  --fill-red: #ff3037;
+  --fill-green: #03a10e;
+  --fill-yellow: #ad8200;
+  --fill-secondary: #161617;
+  --fill-secondary-alt: #141414;
+  --fill-secondary-alt-override: #fafafa;
+  --fill-blue-secondary: #162b5b;
+  --fill-gray-secondary: #6e6e73;
+  --fill-gray-secondary-alt: #141414;
+  --color-fill-green-secondary: #002b03;
+  --color-fill-light-blue-secondary: #002a51;
+  --color-fill-light-gray-secondary: #323232;
+  --color-fill-orange-secondary: #290d00;
+  --color-fill-purple-secondary: #190325;
+  --color-fill-red-secondary: #300;
+  --color-fill-teal-secondary: #002d2b;
+  --color-fill-yellow-secondary: #2b2000;
+  --fill-tertiary: #1d1d1f;
+  --fill-tertiary-alt: #111;
+  --fill-tertiary-override: #f5f5f7;
+  --fill-blue-tertiary: #081021;
+  --fill-gray-tertiary: #424245;
+  --fill-gray-quaternary: #333336;
+  --fill-gray-quinary: #222;
+  --fill-blue-gradient-light: #0e3768;
+  --fill-blue-gradient-dark: #07172a;
+  --fill-gradient-gray-start: #161616;
+  --fill-gradient-gray-end: #000;
+  --fill-table: #1d1d1f;
+  --toggle-color-background: #1d1d1f;
+  --toggle-color-text: #ED8335;
+  --color-button-background: #ED8335;
+  --color-button-background-hover: #111717;
+  --color-button-text: #fff;
+  --color-figure-blue: #ED8335;
+  --color-figure-gray: #f5f5f7;
+  --color-figure-gray-secondary: #86868b;
+  --color-figure-gray-secondary-alt: #a1a1a6;
+  --color-figure-gray-tertiary: #6e6e73;
+  --color-figure-green: #03a10e;
+  --color-figure-light-blue: #7dc1ff;
+  --color-figure-light-gray: #9a9a9e;
+  --color-figure-orange: #f56300;
+  --color-figure-pink: #f14bf1;
+  --color-figure-purple: #a95ed2;
+  --color-figure-red: #ff3037;
+  --color-figure-teal: #00c2bb;
+  --color-figure-yellow: #936d00;
+  --color-highlight-green: #e4fee6;
+  --color-highlight-red: #f8dddd;
+  --color-tutorials-teal: #38a39c;
+  --color-text-description: #b2b2b6;
+  --color-aside-deprecated: var(--color-figure-orange);
+  --color-aside-deprecated-background: var(--color-fill-orange-secondary);
+  --color-aside-deprecated-border: var(--color-figure-orange);
+  --color-aside-experiment: var(--color-figure-purple);
+  --color-aside-experiment-background: var(--color-fill-purple-secondary);
+  --color-aside-experiment-border: var(--color-figure-purple);
+  --color-aside-important: var(--color-figure-yellow);
+  --color-aside-important-background: var(--color-fill-yellow-secondary);
+  --color-aside-important-border: var(--color-figure-yellow);
+  --color-aside-note: var(--color-figure-light-gray);
+  --color-aside-note-background: var(--color-fill-light-gray-secondary);
+  --color-aside-note-border: var(--color-figure-light-gray);
+  --color-aside-tip: var(--color-figure-teal);
+  --color-aside-tip-background: var(--color-fill-teal-secondary);
+  --color-aside-tip-border: var(--color-figure-teal);
+  --color-aside-warning: var(--color-figure-red);
+  --color-aside-warning-background: var(--color-fill-red-secondary);
+  --color-aside-warning-border: var(--color-figure-red);
+
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
